--- a/css/reset.css
+++ b/css/reset.css
@@ -14,6 +14,9 @@ html {
 }
 
 body {
+  overflow-x: hidden;
+  height: 100vh;
+
   background-color: #e6e6e6;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
