--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+/* Random classes [#0] */
+.container {
+  position: relative;
+}
+
+.overlay {
+  cursor: pointer;
+  display: none;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background: #000000a1;
+}
+/* =========================== */
+
 /* Header styles [#1] */
 header {
   position: relative;
@@ -29,6 +47,7 @@ header {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 20;
   transform: translateX(100%);
   transition: all 0.4s ease-in-out;
 
