--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 /* Random classes [#0] */
 .container {
+  padding: 0 1.4rem;
+}
+
+.container-wrapper {
   position: relative;
+  max-width: 365px;
+  margin: 0 auto;
 }
 
 .overlay {
@@ -18,13 +24,11 @@
 
 /* Header styles [#1] */
 header {
-  position: relative;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 }
 
 .header-button {
@@ -44,7 +48,7 @@ header {
 /* Mobile menu navigation */
 
 .main-nav {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   z-index: 20;
@@ -77,6 +81,11 @@ header {
   line-height: 0;
 }
 
+.main-nav-button img {
+  width: 2.6rem;
+  height: 2.6rem;
+}
+
 .main-nav .main-nav-list {
   display: flex;
   flex-direction: column;
@@ -89,3 +98,44 @@ header {
   font-size: 1.8rem;
 }
 /* =========================== */
+
+.main-article {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.main-article-img {
+  width: 100%;
+}
+
+.main-article-title {
+  font-size: 4.4rem;
+  line-height: 1.1;
+  color: var(--very-dark-blue);
+}
+
+.main-article-descriptions {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: flex-start;
+}
+
+.main-article-description {
+  font-size: 1.55rem;
+  line-height: 1.5;
+  color: var(--dark-grayish-blue);
+}
+
+.main-article-link:link,
+.main-article-link:visited {
+  display: inline-block;
+  background-color: var(--soft-red);
+  color: var(--off-white);
+  font-weight: 400;
+  padding: 1.1rem 2.2rem;
+  font-size: 1.55rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
