--- a/css/reset.css
+++ b/css/reset.css
@@ -20,7 +20,7 @@ body {
   background-color: #e6e6e6;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
-  color: var(--dark);
+  color: var(--very-dark-blue);
 }
 
 ul {
@@ -37,4 +37,19 @@ button {
   border: none;
   cursor: pointer;
   background-color: transparent;
+}
+
+p {
+  color: var(--dark-grayish-blue);
+  font-size: 1.55rem;
+  line-height: 1.5;
+}
+
+h1,
+h3 {
+  color: var(--very-dark-blue);
+}
+
+h3 {
+  font-size: 1.85rem;
 }
