--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* Random classes    [#0] */
+/* Header styles     [#1] */
+/* Main Article      [#2] */
+/* Aside Article     [#3] */
+/* Secondary Article [#4] */
+/* =========================== */
+
 /* Random classes [#0] */
 .container {
   padding: 0 1.4rem;
@@ -99,6 +106,7 @@ header {
 }
 /* =========================== */
 
+/* Main Article [#2] */
 .main-article {
   display: flex;
   flex-direction: column;
@@ -107,12 +115,12 @@ header {
 
 .main-article-img {
   width: 100%;
+  height: 100%;
 }
 
 .main-article-title {
   font-size: 4.4rem;
   line-height: 1.1;
-  color: var(--very-dark-blue);
 }
 
 .main-article-descriptions {
@@ -120,12 +128,6 @@ header {
   flex-direction: column;
   gap: 2rem;
   align-items: flex-start;
-}
-
-.main-article-description {
-  font-size: 1.55rem;
-  line-height: 1.5;
-  color: var(--dark-grayish-blue);
 }
 
 .main-article-link:link,
@@ -138,4 +140,93 @@ header {
   font-size: 1.55rem;
   text-transform: uppercase;
   letter-spacing: 3px;
+}
+/* =========================== */
+
+/* Aside Article [#3] */
+.main-aside {
+  padding: 6rem 0;
+}
+
+.main-aside-wrapper {
+  background-color: var(--very-dark-blue);
+  padding: 1.4rem;
+}
+
+.main-aside-title {
+  color: var(--soft-orange);
+  font-size: 3rem;
+}
+
+.main-aside-article {
+  padding: 2.6rem 0;
+  border-bottom: 1px solid var(--dark-grayish-blue);
+}
+
+.main-aside-article:last-child {
+  border-bottom: none;
+}
+
+.main-aside-link {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.main-aside-article h3 {
+  color: var(--off-white);
+  font-weight: 700;
+}
+
+.main-aside-article p {
+  width: 90%;
+  color: var(--grayish-blue);
+}
+/* =========================== */
+
+/* Secondary Article [#4] */
+.secondary-articles {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+
+  counter-set: article-counter;
+}
+
+.secondary-article-link:link {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: end;
+  gap: 2rem;
+
+  counter-increment: article-counter;
+}
+
+.secondary-article-img {
+  width: 100%;
+  height: 13.8rem;
+}
+
+.secondary-articles div {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.secondary-articles div::before {
+  display: block;
+  font-size: 3.4rem;
+  font-weight: 700;
+  content: "0" counter(article-counter);
+  color: var(--grayish-blue);
+}
+
+.secondary-articles h3 {
+  font-weight: 800;
+  color: var(--very-dark-blue);
+}
+
+.secondary-articles p {
+  width: 98%;
 }
