--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,12 @@ header {
 
 /* Main Article [#2] */
 .main-article {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 1.6rem;
 }
 
-.main-article-img {
+.main-article img {
   width: 100%;
   height: 100%;
 }
@@ -153,9 +153,8 @@ header {
   padding: 1.4rem;
 }
 
-.main-aside-title {
+.main-aside-wrapper h2 {
   color: var(--soft-orange);
-  font-size: 3rem;
 }
 
 .main-aside-article {
@@ -167,7 +166,7 @@ header {
   border-bottom: none;
 }
 
-.main-aside-link {
+.main-aside-link:link {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -186,8 +185,8 @@ header {
 
 /* Secondary Article [#4] */
 .secondary-articles {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 2.4rem;
 
   counter-set: article-counter;
