--- a/css/layout.css
+++ b/css/layout.css
@@ -1,11 +1,16 @@
-@media (width >= 700px) {
+@media only screen and (width >= 43.75em) {
   /* Random classes */
+
   .container-wrapper {
-    max-width: 700px;
+    max-width: 70rem;
   }
 
   p {
     font-size: 1.6rem;
+  }
+
+  h1 {
+    font-size: 4.6rem;
   }
 
   h2 {
@@ -58,21 +63,18 @@
   /* Main Article */
   .main-article {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     align-items: center;
-    gap: 0;
-
-    height: 50rem;
+    column-gap: 0;
+    row-gap: 5rem;
   }
 
   .main-article figure {
     grid-column: 1 / 3;
   }
 
-  .main-article-title {
+  .main-article h1 {
     grid-row: 2 / 3;
-
-    font-size: 4.6rem;
   }
 
   .main-article-descriptions {
@@ -93,7 +95,74 @@
   }
 
   .secondary-article-img {
+    width: 100%;
     height: 100%;
+  }
+  /* =========================== */
+}
+
+@media only screen and (width >= 75em) {
+  /* Random classes */
+  .container {
+    padding: 2rem 0 4rem;
+  }
+
+  .container-wrapper {
+    max-width: 120rem;
+  }
+
+  h1 {
+    font-size: 4.8rem;
+    width: 80%;
+  }
+  /* =========================== */
+
+  /* Header styles */
+  .header-logo-img {
+    width: 5rem;
+    height: 3.2rem;
+  }
+  /* =========================== */
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 2.4rem;
+    row-gap: 6rem;
+  }
+
+  /* Main Article */
+  .main-article {
+    grid-column: 1 / 3;
+
+    row-gap: 1.8rem;
+  }
+  /* =========================== */
+
+  .main-aside {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  /* Aside Article */
+  .main-aside-wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  /* =========================== */
+
+  /* Secondary Article */
+  .secondary-articles {
+    grid-column: 1 / 4;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   /* =========================== */
 }
