--- a/css/reset.css
+++ b/css/reset.css
@@ -17,7 +17,7 @@ body {
   overflow-x: hidden;
   height: 100vh;
 
-  background-color: #e6e6e6;
+  background-color: var(--off-white);
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
   color: var(--very-dark-blue);
@@ -27,10 +27,8 @@ ul {
   list-style: none;
 }
 
-a:link,
-a:visited {
+a:link {
   text-decoration: none;
-  color: var(--dark);
 }
 
 button {
@@ -48,6 +46,17 @@ p {
 h1,
 h3 {
   color: var(--very-dark-blue);
+}
+
+a:link,
+h2,
+h3 {
+  transition: all 0.3s;
+}
+
+h1 {
+  font-size: 4.4rem;
+  line-height: 1.1;
 }
 
 h2 {
