--- a/css/variables.css
+++ b/css/variables.css
@@ -1,9 +1,9 @@
 :root {
-  --soft-orange: hsl(35, 77%, 62%);
-  --soft-red: hsl(5, 85%, 63%);
+  --soft-orange: hsl(35deg 77% 62%);
+  --soft-red: hsl(5deg 85% 63%);
 
-  --off-white: hsl(36, 100%, 99%);
-  --grayish-blue: hsl(233, 8%, 79%);
-  --dark-grayish-blue: hsl(236, 13%, 42%);
-  --very-dark-blue: hsl(240, 100%, 5%);
+  --off-white: hsl(36deg 100% 99%);
+  --grayish-blue: hsl(233deg 8% 79%);
+  --dark-grayish-blue: hsl(236deg 13% 42%);
+  --very-dark-blue: hsl(240deg 100% 5%);
 }
